--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,5 +11,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - run: npm install
-      - run: npm run init
+      - run: npm run lint
       - run: npm run test
